objects/FAB_Shipment_Report__c.object
<CustomObject>
    <description>FAB Shipment Report is the object which contains the FAB 1-8 Data for Shipment. Source is DW.</description>
    <fields>
        <fullName>ASP__c</fullName>
        <label>ASP</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>FAB Shipment Report</relationshipLabel>
        <relationshipName>FAB_Shipment_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Shortname__c</fullName>
        <formula>Account_Name__r.Short_Name__c</formula>
        <label>Account Shortname</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERPDevice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ERPDevice</label>
        <referenceTo>ERP_Device__c</referenceTo>
        <relationshipLabel>FAB Shipment Report</relationshipLabel>
        <relationshipName>FAB_Shipment_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ERP_Device__c</fullName>
        <label>ERP Device</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Item_Type__c</fullName>
        <label>Item Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BW</fullName>
                </value>
                <value>
                    <fullName>MPW-S</fullName>
                </value>
                <value>
                    <fullName>NSW</fullName>
                </value>
                <value>
                    <fullName>PC</fullName>
                </value>
                <value>
                    <fullName>SD</fullName>
                </value>
                <value>
                    <fullName>SL</fullName>
                </value>
                <value>
                    <fullName>SW</fullName>
                </value>
                <value>
                    <fullName>TK</fullName>
                </value>
                <value>
                    <fullName>US</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Amount__c</fullName>
        <label>Shipment Amount</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipped_Wafer_Qty__c</fullName>
        <label>Shipped Wafer Qty</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Week__c</fullName>
        <label>Work Week</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>FAB Shipment Report</label>
    <nameField>
        <displayFormat>FSR-N-{0}</displayFormat>
        <label>FAB-Shipment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FAB Shipment Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>